@@ -1320,6 +1320,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath="..\..\..\libntp\ntp_lineedit.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\libntp\ntp_random.c"
 				>
 				<FileConfiguration
@@ -2006,6 +2010,10 @@
 			</File>
 			<File
 				RelativePath="..\include\ntp_iocompletionport.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ntp_lineedit.h"
 				>
 			</File>
 			<File
